tests/typechecking/invalid/let_rec_poly.ml
let rec f x = x in
ignore (f 2.);
ignore (f 1)
